--- a/main.html
+++ b/main.html
@@ -8,6 +8,23 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<form>
+	<label for="name">Name</label>
+	<input type="text" id="name" placeholder="Name">
+	<label for="phone">Phone Number</label>
+	<input type="text" id="phone" placeholder="Phone Number">
+	<label for="address">Address</label>
+	<input type="text" id="address" placeholder="Address">
+	<label for="checkbox">Have you ever lived with a Dog ?</label>
+	<input type="checkbox" id="checkbox" value="Have you ever lived with a Dog ?">
+	<label for="multiSelect">Please select your preferred breeds</label>
+	<select id="multiSelect">
+		<option>labourador</option>
+		<option>desi</option>
+		<option>German shepherdr</option>
+	</select>
+	<button type="submit">Submit</button>
+		</form>
     <script type="text/javascript" src="./script.js">
 </script>
 
