--- a/main.html
+++ b/main.html
@@ -16,7 +16,7 @@
 	<label for="address">Address</label>
 	<input type="text" id="address" placeholder="Address">
 	<label for="checkbox">Have you ever lived with a Dog ?</label>
-	<input type="checkbox" id="checkbox" value="Have you ever lived with a Dog ?">
+	<input type="checkbox" id="checkbox" value="Have you ever lived with a Dog before?">
 	<label for="multiSelect">Please select your preferred breeds</label>
 	<select id="multiSelect">
 		<option>labourador</option>
