--- a/main.html
+++ b/main.html
@@ -1,33 +1,37 @@
 <!DOCTYPE html>
-
-<html>
-
+<html lang="en">
 <head>
-	<link rel="stylesheet" href="styles.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Dog Adoption Application</title>
+   
 </head>
-
 <body>
-	<!-- the entire body must be written by student -->
-	<form>
-	<label for="name">Name</label>
-	<input type="text" id="name" placeholder="Name">
-	<label for="phone">Phone Number</label>
-	<input type="text" id="phone" placeholder="Phone Number">
-	<label for="address">Address</label>
-	<input type="text" id="address" placeholder="Address">
-	<label for="checkbox">Have you ever lived with a Dog ?</label>
-	<input type="checkbox" id="checkbox" value="Have you ever lived with a Dog before?">
-	<label for="multiSelect">Please select your preferred breeds</label>
-	<select id="multiSelect">
-		<option>labourador</option>
-		<option>desi</option>
-		<option>German shepherdr</option>
-	</select>
-	<button type="submit">Submit</button>
-		</form>
-    <script type="text/javascript" src="./script.js">
-</script>
+
+<form action="#" method="post">
+    <label for="name">Name:</label>
+    <input type="text" id="name" name="name" placeholder="Enter your name" required>
+
+    <label for="phone">Phone Number:</label>
+    <input type="text" id="phone" name="phone" placeholder="Enter your phone number" required>
+
+    <label for="address">Address:</label>
+    <input type="text" id="address" name="address" placeholder="Enter your address" required>
+
+    <label>Have you ever lived with a Dog before?</label>
+    <input type="checkbox" id="dogExperience" name="dogExperience" value="Have you ever lived with a Dog before?" required>
+
+    <label for="preferredBreeds">Please select your preferred breeds:</label>
+    <select id="preferredBreeds" name="preferredBreeds[]" multiple required>
+        <option value="Golden Retriever">Golden Retriever</option>
+        <option value="Labrador Retriever">Labrador Retriever</option>
+        <option value="German Shepherd">German Shepherd</option>
+        <option value="Beagle">Beagle</option>
+        <!-- Add more options as needed -->
+    </select>
+
+    <input type="submit" value="Submit">
+</form>
 
 </body>
-
 </html>
